<resources>
    <string name="app_name">BoaViagem</string>
    <string name="default_user">leitor</string>
    <string name="default_password">123</string>
    <string name="login_error">Usuário ou senha inválidos</string>
    <string name="main_screen_title">BoaViagem</string>
    <string name="btn_novo_gasto">Novo Gasto</string>
    <string name="btn_nova_viagem">Nova Viagem</string>
    <string name="btn_minhas_viajens">Minhas Viajens</string>
    <string name="btn_configura_oes">Configuraçoes</string>
    <string name="show_total_spend">R$ %1$.3f</string>
    <string name="KEY_EDIT_TRIP">9083</string>
    <string name="txt_remove_confirmation_dialog">Deseja realmente remover a viagem?</string>
    <string name="preferences">Preferências</string>
    <string name="travel_mode_sumary">Deteminar a viagem ativa com base na data atual</string>
    <string name="travel_mode_title">Modo Viagem</string>
    <string name="preference_dilog_title">Informe o valor limite</string>
    <string name="limit_value_sumary">Notifica a viagem ativa com base na data atual</string>
    <string name="limit_value_title">Alerta de Gastos</string>
    <string name="travel_mode_preference">travel_mode</string>
    <string name="limit_value_preference">limit_value</string>
    <string name="STORAGE_KEY_TRAVELS">1040612</string>
    <string name="TRAVEL_TYPE_BUSINESS">Negócios</string>
    <string name="INTENT_TRAVEL_EXPENSES_ID">32648</string>
    <string name="New_Travel_Budget_Field">R$ %1$.3f</string>


    <string-array name="category_cost">
        <item>Alimentação</item>
        <item>Combustível</item>
        <item>Transporte</item>
        <item>Hospedagem</item>
        <item>Outros</item>

    </string-array>
</resources>
